Closed Bug 29866 Opened 25 years ago Closed 25 years ago

MLK: leak a URI in Wallet_Localize()

Categories

(SeaMonkey :: Passwords & Permissions, defect, P3)

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bruce, Assigned: morse)

References

()

Details

(Keywords: memory-leak)

the nsIURI isn't freed anywhere in Wallet_Localize().  It needs to be... with 
the number of returns out of there, this is a classic case of needing to use 
nsCOMPtr.

malloc
PL_strndup
ExtractString
nsStdURLParser::ParseAtScheme(const char*, char**, char**, char**, char**, int*, 
char**)
nsStdURL::Parse(const char*)
nsStdURL::SetSpec(const char*)
nsChromeProtocolHandler::NewURI(const char*, nsIURI*, nsIURI**)
nsIOService::NewURI(const char*, nsIURI*, nsIURI**, nsIProtocolHandler**)
nsIOService::NewURI(const char*, nsIURI*, nsIURI**)
Wallet_Localize(char*)
si_CheckGetPassword(unsigned short**, const unsigned short*, int*)
SINGSIGN_PromptPassword
nsWalletlibService::PromptPasswordURL(const unsigned short*, unsigned short**, 
const char*, int, nsIPrompt*, int*)
nsWebShellWindow::PromptPassword(const char*, int, const unsigned short*, const 
unsigned short*, unsigned short**, int*)
nsMsgIncomingServer::GetPasswordWithUI(const unsigned short*, const unsigned 
short*, nsIMsgWindow*, char**)
nsPop3Protocol::GetPassword(char**)
nsPop3Protocol::SendPassword()
nsPop3Protocol::ProcessProtocolState(nsIURI*, nsIInputStream*, unsigned int, 
unsigned int)
nsMsgProtocol::OnDataAvailable(nsIChannel*, nsISupports*, nsIInputStream*, 
unsigned int, unsigned int)
nsOnDataAvailableEvent::HandleEvent()
nsStreamListenerEvent::HandlePLEvent(PLEvent*)
PL_HandleEvent
PL_ProcessPendingEvents
nsEventQueueImpl::ProcessPendingEvents()
nsMacNSPREventQueueHandler::RepeatAction(const EventRecord&)
Repeater::DoRepeaters(const EventRecord&)
nsMacMessagePump::DispatchEvent(int, EventRecord*)
nsMacMessagePump::DoMessagePump()
nsAppShell::Run()
nsAppShellService::Run()
Status: NEW → ASSIGNED
Target Milestone: M15
Fix checked in.  Same problem in Cookie_Localize.  Fixes are in the following 
files:

   extensions/wallet/src/wallet.cpp
   extensions/cookie/nsCookie.cpp
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
steve, how should this be verified from a qa perspective, if possible?
Keywords: verifyme
I don't have the foggiest idea.  Best bet would be to ask the reporter to verify 
it.
bruce, could you please let us know if this is fixed for you? thx! (then we can
mark this verified. :-)
-> jrgm for mlk bugs... (for the nonce. :-)
Keywords: verifyme
QA Contact: sairuh → jrgm
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.