fix memory leak -- bug 29866